--- a/package.json
+++ b/package.json
@@ -11,15 +11,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "axios": "^1.7.2",
+    "axios": "^1.7.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "multer": "^1.4.5-lts.1",
-    "node-poppler": "^7.2.1",
     "openai": "^4.53.2",
-    "pdf-parse": "^1.1.1",
-    "pdf-text-reader": "^5.1.0",
-    "pdf2html": "^3.1.0"
+    "pdf-text-reader": "^4.1.0"
   }
 }
